# recipe-parser

./: .gitignore  README.md  app.py  otto.json  pyproject.toml  recipe-prompt.txt  split_book.py  test.json
recipes/: egg-sambal-shakshuka.json  spelt-with-chorizo,-sweet-potato,-red-onion-spinach.json
src/recipe_parser/: cli.py  models.py  parser.py  utils.py
