[project]
name = "recipe-parser"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.40.0",
    "pydantic-settings>=2.6.1",
    "pydantic>=2.10.3",
    "beautifulsoup4>=4.12.3",
    "python-fasthtml>=0.10.1",
    "monsterui>=0.0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "ruff>=0.8.2",
]
